<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".HomeActivity">

    <TextView
            android:text="@string/minesweeper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" android:fontFamily="monospace" android:textSize="36sp"
            android:textAllCaps="true" app:layout_constraintTop_toTopOf="parent"/>

    <Button
            android:text="@string/start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/btnStart"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:textSize="18sp"
            android:textAllCaps="true" android:fontFamily="monospace" app:layout_constraintHorizontal_bias="0.498"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/rgrpLevels"/>

    <androidx.constraintlayout.widget.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                                android:id="@+id/guideline"
                                                android:orientation="vertical"
                                                app:layout_constraintGuide_percent="0.50121653"/>

    <androidx.constraintlayout.widget.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                                android:id="@+id/guideline3"
                                                android:orientation="vertical"
                                                app:layout_constraintGuide_percent=".25"/>

    <androidx.constraintlayout.widget.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                                android:id="@+id/guideline2" app:layout_constraintGuide_begin="365dp"
                                                android:orientation="horizontal"/>

    <androidx.constraintlayout.widget.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                                android:id="@+id/guideline4"
                                                android:orientation="horizontal"
                                                app:layout_constraintGuide_percent="0.25"/>

    <androidx.constraintlayout.widget.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                                android:id="@+id/guideline5"
                                                android:orientation="horizontal"
                                                app:layout_constraintGuide_percent="0.75"/>

    <RadioGroup android:layout_height="wrap_content" android:layout_width="wrap_content"
                android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline3" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent" android:id="@+id/rgrpLevels">
        android:layout_width="161dp"
        android:layout_height="193dp"
        android:id="@+id/rgrpLevels"
        app:layout_constraintStart_toStartOf="@+id/guideline3" android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp" android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
        android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"

        <RadioButton
                android:text="@string/easy"
                android:checked="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/rbtnEasy"
                app:layout_constraintStart_toStartOf="@+id/guideline3" android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp" android:layout_marginBottom="12dp"
                app:layout_constraintBottom_toTopOf="@+id/rbtnMedium" android:fontFamily="monospace"/>

        <RadioButton
                android:text="@string/medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/rbtnMedium"
                app:layout_constraintStart_toStartOf="@+id/guideline3" android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@+id/guideline2" android:fontFamily="monospace"/>

        <RadioButton
                android:text="@string/hard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/rbtnHard"
                app:layout_constraintStart_toStartOf="@+id/guideline3" android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp" android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="@+id/guideline2" android:fontFamily="monospace"/>


        <RadioButton
                android:text="@string/expert"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/rbtnExpert"
                app:layout_constraintStart_toStartOf="@+id/guideline3" android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/rbtnHard" android:fontFamily="monospace"/>

    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>